# Cartograph

./: .dockerignore  .env.example  .env.sidecar.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  compose.override.example.yaml  compose.sidecar.yaml  compose.yaml  pyproject.toml  secrets.yaml  secrets.yaml.example
config/: cf_tier_chain.yaml  discord_tags.yaml  routing_rules.yaml
config/policy/: negative_keywords.yaml
config/profile/: comp_floors.yaml  prefs.yaml  resume.json  skills.yaml
config/profile/cover_letters/: backend.md  contract.md  fellowship.md  freelance.md  fullstack.md  generic.md  intern_india.md  ml.md
config/profile/my_resume/: altacv.cls  mmayer.tex  (+2 more)
config/prompts/: cold_outreach_drafter.txt  cover_letter.txt  email_classifier.txt  followup.txt  re_ranker.txt  resume_tailor.txt  source_classifier.txt  tier2_extractor.txt
config/sources/: ashby_slugs.yaml  fellowships.yaml  greenhouse_slugs.yaml  internshala_dropdown_matrix.yaml  internshala_filters.yaml  internshala_jobs_keywords.yaml  internshala_jobs_selectors.yaml  internshala_selectors.yaml  lever_slugs.yaml  workable_slugs.yaml
dashboard/: app.js  index.html  styles.css
dashboard/lib/: dom.js  postgrest.js
dashboard/views/: applications.js  costs.js  opps.js  overview.js  refits.js  sources.js
deploy/: prometheus_cartograph.yml
docker/: applier.Dockerfile  apply_browser.Dockerfile  camoufox-entrypoint.sh  camoufox.Dockerfile  discovery.Dockerfile  jobs-bot.Dockerfile  tools.Dockerfile
docker/postgres/: postgresql.conf
docs/: PI_DEPLOY.md
docs/extensions/: cdp_sidecar.md
docs/runbooks/: cross_compile_ship.md  dashboard.md  identity_ban.md  internshala_auto_apply_dryrun.md  internshala_discovery.md  latex_apply_smoke.md  pi_recovery.md  prometheus_scrape_setup.md  sidecar_setup.md  source_quarantine.md
grafana/: alerts.json
grafana/dashboards/: agent_jobs.json
migrations/: V001__core_schema.sql  V002__reserved_names_v2.sql  V003__sources_seed.sql  V004__opp_state_machine.sql  V005__cf_clearance_cache_indexes.sql  V006__digest_schedule.sql  V007__resume_artifacts.sql  V008__source_url_updates.sql  V009__followups.sql  V010__outbound_messages.sql  V011__resume_variants.sql  V012__source_refit_log.sql  V013__bounty_sources.sql  V014__dark_source_discovery.sql  V015__twitter_source.sql  V016__target_companies_oss_columns.sql  V017__multi_tenant_cutover.sql  V018__ranker_weights_fit.sql  V019__dashboard_views.sql  V020__seed_notification_routes.sql  V021__dashboard_view_aliases.sql  V022__auto_apply.sql  V023__auto_apply_v2.sql  V024__expired_from_applied.sql  V025__discovery_method.sql  V026__discovery_cycle_log.sql  V027__discovery_cycle_log_expired.sql  V028__internshala_jobs.sql
scripts/: add_identity.py  add_identity_from_file.py  audit_deps.py  backup.sh  bootstrap.sh  durability_drill.sh  fetch_sidecar_env.sh  install_cron.sh  internshala_local_ingest.py  pretest_cf.sh  probe_reaction.py  restore_drill.sh  ship_to_pi.sh  sidecar_bootstrap.sh  telegram_auth.py  validate_migrations.sh  verify_resume_apply.py  wipe_opportunity_data.sql
src/: __init__.py
src/api/: __init__.py  admin.py  dashboard.py  health.py  main.py  metrics.py  postgrest_proxy.py
src/application/: __init__.py  auto_apply_engine.py  cover_letter.py  followup.py  policy.py  resume_tailor.py  sender.py  sender_db.py  sender_legacy.py
src/cli/: __init__.py  identity.py  internshala_discover.py  internshala_jobs_discover.py  main.py  opps.py  routes.py  sources.py  tenant.py
src/common/: __init__.py  currency.py  db.py  experience_parser.py  identity_vault.py  internshala_posted_parser.py  llm.py  logger.py  metrics.py  queue.py  secrets.py  stipend_parser.py  types.py
src/extractors/: __init__.py  base.py  dedup.py  persist.py  tier0_regex.py  tier2_llm.py
src/fetchers/: __init__.py  base.py  dispatcher.py  flaresolverr.py  http.py  proxy.py
src/gmail_watcher/: __init__.py  classifier.py  imap.py  state_writer.py  upwork_parser.py
src/notifiers/: __init__.py  base.py  email.py  obsidian.py
src/ranker/: __init__.py  embeddings.py  feedback.py  formula.py  global_refit.py  llm_rerank.py  source_refit.py  variant_refit.py
src/sources/: __init__.py  base.py  hn_algolia.py  reddit_auth.py  reddit_forhire.py  registry.py
src/workers/: __init__.py  applier.py  apply_browser_worker.py  apply_result_worker.py  cold_outreach.py  crawler.py  dark_source_discovery.py  extractor_worker.py  gmail_worker.py  identity_warmup.py  internshala_discovery_worker.py  internshala_jobs_discovery_worker.py  notifier_worker.py  oss_funnel.py  ranker_worker.py  scheduler.py  telegram_fetcher.py  twitter_signal.py
tests/: conftest.py  test_smoke.py  test_stream_contracts.py
tests/api/: test_postgrest_proxy.py
tests/application/: test_auto_apply_engine.py  test_cold_outreach.py  test_compile.py  test_followup.py  test_policy.py  test_render.py  test_resume_parser.py  test_sanitizer.py  test_selector.py  test_sender_flag_dispatch.py  test_sender_latex_audit.py  test_sender_latex_compile_pipeline.py  test_sender_latex_dispatch.py  test_sender_latex_phases.py  test_sender_latex_pipeline.py  test_sender_latex_tailor.py  test_sender_no_pdf_on_discord.py  test_submitter_internshala.py  test_variant_picker.py
tests/common/: __init__.py  test_experience_parser.py  test_internshala_posted_parser.py  test_queue_ensure_group.py  test_settings_fields.py  test_stipend_parser.py  test_tenant_resolver.py
tests/extractors/: test_tier1_ats_others.py  test_tier1_greenhouse.py
tests/fetchers/: test_dispatcher_identity.py
tests/fixtures/: stipend_strings.json
tests/integration/: __init__.py  conftest.py  test_dashboard_views.py  test_postgrest_e2e.py
tests/ranker/: test_formula_cache.py  test_global_refit.py  test_source_refit.py
tests/sources/: test_bounty_lane.py  test_dark_source_discovery.py  test_oss_funnel.py  test_telegram_fetcher.py  test_twitter_fetcher.py
tests/workers/: test_apply_result_worker.py  test_internshala_discovery.py  test_internshala_jobs_discovery.py
(+231 files in other folders)
