[project]
name = "cartograph"
version = "0.1.0"
description = "Autonomous 24/7 job / internship / fellowship / freelance pipeline (Pi 5, ARM64)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Lakshit Gupta" }]
license = { text = "Proprietary" }

dependencies = [
    # Discord
    "discord.py>=2.4.0",
    # HTTP + CF evasion
    "curl_cffi>=0.7.0",
    "httpx>=0.27.0",
    # DB + queue
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",          # Postgres vector adapter (used at SQL boundary)
    "redis[hiredis]>=5.0.7",
    # API / metrics
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",  # runtime CLI server, no import in source
    "prometheus-client>=0.20.0",
    # ML — pinned to torch from CPU-only index below (no NVIDIA wheels on Pi).
    "torch>=2.4.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",       # Phase-2 logistic regression on response rates
    # Data
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Mail (Resend HTTP via httpx for now + Gmail IMAP IDLE)
    "aioimaplib>=1.1.0",
    "resend>=2.4.0",             # Phase-2 may switch from raw httpx to SDK
    # Telegram (freelance lane, Day 13)
    "telethon>=1.36.0",
    # Crypto
    "pynacl>=1.5.0",
    # CLI
    "click>=8.1.0",
    # Parsing
    "selectolax>=0.3.21",
    "feedparser>=6.0.11",        # RSS / Atom tier-1 extractor (rss_generic strategy)
    # Browser
    "camoufox[geoip]>=0.4.10",
    "playwright>=1.46.0",
    # Misc
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "respx>=0.21.0",
    "fakeredis>=2.24.0",
]

[project.scripts]
carto = "src.cli.main:cli"

# Pull torch from PyTorch CPU-only index. Without this, uv pulls the default
# CUDA build which drags in ~3 GB of NVIDIA wheels (cublas, cudnn, cufft,
# cusolver, cusparse, nccl, triton, cuda-bindings). Pi 5 has no GPU; CUDA
# bytes sit dead in the image. CPU wheel is what we want.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
# Bumped from 100 → 140 to keep one-line SQL queries grep-friendly. Real wins
# come from short functions, not narrow columns.
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "SIM", "RUF"]
# S101 asserts (tests), S104/S105/S106 hardcoded passwords (false-pos on field defaults),
# S311 PRNG (we use random for behavioral jitter — non-security),
# S608 SQL via .format (we use $1/$2 placeholders, ruff still warns on inline f-strings),
# RUF001 em-dash style chars (intentional in docstrings + microcopy).
ignore = ["S101", "S104", "S105", "S106", "S311", "S608", "RUF001"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
# Migrations are SQL inside strings — ruff false-positives.
"src/cli/main.py" = ["S608"]
# Obsidian writer is sync-once-per-write; pathlib in async is acceptable.
"src/notifiers/obsidian.py" = ["ASYNC240"]
# Identity warmup spawns pgrep on a system path; acceptable for Pi host.
"src/fetchers/browser/scaler.py" = ["S607"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
