[project]
name = "cartograph"
version = "0.1.0"
description = "Autonomous 24/7 job / internship / fellowship / freelance pipeline (Pi 5, ARM64)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Lakshit Gupta" }]
license = { text = "Proprietary" }

dependencies = [
    # Discord
    "discord.py>=2.4.0",
    # HTTP + CF evasion
    "curl_cffi>=0.7.0",
    "httpx>=0.27.0",
    # DB + queue
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",          # Postgres vector adapter (used at SQL boundary)
    "redis[hiredis]>=5.0.7",
    # API / metrics
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",  # uvloop + httptools = ~30% faster on Pi; keep
    "prometheus-client>=0.20.0",
    # ML — pinned to torch from CPU-only index below (no NVIDIA wheels on Pi).
    "torch>=2.4.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",       # Phase-2 logistic regression on response rates
    # Data
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "pyyaml>=6.0",
    # Scheduling
    "apscheduler>=3.10.0",
    # Mail (Resend HTTP via httpx; gmail IMAP IDLE)
    "aioimaplib>=1.1.0",
    # resend SDK removed — notifiers/email.py uses raw httpx; re-add if SDK ever wanted
    # telethon defers to Day-13 freelance lane; install via `uv pip install telethon` then
    # Crypto
    "pynacl>=1.5.0",
    # CLI
    "click>=8.1.0",
    # Parsing
    "selectolax>=0.3.21",
    "feedparser>=6.0.11",        # RSS / Atom tier-1 extractor (rss_generic strategy)
    # Browser
    "camoufox[geoip]>=0.4.10",
    "playwright>=1.46.0",
    # Misc
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "tzdata>=2024.1",
    "pylatexenc>=2.10",
    "telethon>=1.43.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
    "respx>=0.21.0",
    "fakeredis>=2.24.0",
]

[project.scripts]
carto = "src.cli.main:cli"

# Pull torch from PyTorch CPU-only index. Without this, uv pulls the default
# CUDA build which drags in ~3 GB of NVIDIA wheels (cublas, cudnn, cufft,
# cusolver, cusparse, nccl, triton, cuda-bindings). Pi 5 has no GPU; CUDA
# bytes sit dead in the image. CPU wheel is what we want.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
# Bumped from 100 → 140 to keep one-line SQL queries grep-friendly. Real wins
# come from short functions, not narrow columns.
line-length = 140
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "S", "SIM", "RUF"]
# S101 asserts (tests), S104/S105/S106 hardcoded passwords (false-pos on field defaults),
# S110 try/except/pass is intentional in Discord delivery + IMAP idle loops
#      where the next iteration retries; we already log via _log at the call site,
# S311 PRNG (we use random for behavioral jitter — non-security),
# S608 SQL via .format (we use $1/$2 placeholders, ruff still warns on inline f-strings),
# N818 Exception-without-Error-suffix — entrenched naming convention in this repo
#      (SanitizerReject, CostCapReached, LLMEmptyResponse, LLMSafetyBlock, …) and
#      renaming churn isn't worth it for the small readability win,
# SIM105 contextlib.suppress vs try/except/pass — both forms are fine; we don't
#        rewrite suppression sites unless the existing code calls for it,
# SIM108 ternary-vs-if-else — branchy if-else stays more readable for multi-line
#        conditions,
# RUF001 em-dash style chars (intentional in docstrings + microcopy),
# RUF012 mutable-default-class-attribute — RedisQ._MAXLEN is a frozen lookup table,
#        the "mutable" label is technically true but operationally read-only,
# RUF046 int-of-int redundant cast — defensive cast against unknown stream payloads
#        that arrive as `Any`; readability over micro-cleanness.
ignore = [
    "S101", "S104", "S105", "S106", "S110", "S311", "S608",
    "N818",
    "SIM105", "SIM108",
    "RUF001", "RUF012", "RUF046",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
# Migrations are SQL inside strings — ruff false-positives.
# Mig + seed loaders run pathlib synchronously inside async wrappers; the path
# computation is cheap and happens once per CLI invocation, not in a hot loop.
"src/cli/main.py" = ["S608", "ASYNC240"]
# Obsidian writer is sync-once-per-write; pathlib in async is acceptable.
"src/notifiers/obsidian.py" = ["ASYNC240"]
# Identity warmup spawns pgrep on a system path; acceptable for Pi host.
"src/fetchers/browser/scaler.py" = ["S607"]
# Integration tests legitimately use pathlib + blocking subprocess.run for
# one-off verification (the tests are async only because asyncio_mode=auto,
# not because they need an event loop for the body).
"tests/application/test_compile.py" = ["ASYNC240", "ASYNC221"]
# One-shot Telethon CLI prompts for phone + OTP. Synchronous input() inside
# an async function is the only practical option — there's no aio-stdin in
# the stdlib and pulling aioconsole for a single auth flow is overkill.
# SIM112: SOPS-decrypted env keys are lowercase by project convention
# (secrets.yaml keys map verbatim to env names); don't uppercase here.
"scripts/telegram_auth.py" = ["ASYNC250", "SIM112"]
# Same justification as telegram_auth.py: one-shot interactive CLI that
# prompts for credentials inside an async main(). aioconsole is overkill
# for a single-use script.
"scripts/add_identity.py" = ["ASYNC250"]
# Phase 2.4 source refit follows the sklearn convention of uppercase ``X``
# for the feature matrix (lowercase ``y`` for the label vector). PEP8
# would object; ML readability wins here. Same exemption for the test.
"src/ranker/source_refit.py" = ["N803", "N806"]
"src/ranker/global_refit.py" = ["N803", "N806"]
"tests/ranker/test_source_refit.py" = ["N806"]
"tests/ranker/test_global_refit.py" = ["N806"]
# Telethon's TelegramClient / FloodWaitError are PascalCase classes;
# rebinding them from a tuple-unpacked import wrapper trips N806 even
# though we're naming classes, not variables. The listener loop accepts
# them as keyword-only parameters, which trips N803 on the param name
# (same PascalCase class-as-callable handoff).
"src/sources/freelance/telegram_fetcher.py" = ["N806"]
"src/sources/freelance/telegram/loop.py" = ["N803"]

[tool.mypy]
python_version = "3.11"
# Strict mode flags ~9 long-standing issues in src/common/* (Record indexing,
# Any returns, union-attr) that pre-date this work. Loosened to a pragmatic
# subset so the pre-commit hook surfaces NEW regressions without blocking
# commits on entrenched debt. Promote back to strict once src/common is clean.
strict = false
warn_return_any = false
warn_unused_ignores = true
disallow_untyped_defs = false
ignore_missing_imports = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# `-m "not integration"` is the default lane: it deselects every test
# tagged `@pytest.mark.integration` from the standard `uv run pytest`
# invocation. Two test trees use this marker today:
#   - tests/application/test_compile.py — LaTeX compile pipeline
#     (needs tectonic/qpdf/exiftool from the applier image)
#   - tests/integration/ — V019 dashboard views + PostgREST e2e
#     (needs a reachable Docker daemon + Python `docker` SDK)
# Run either lane explicitly:
#   uv run pytest -m integration tests/integration/ -q --no-header
#   uv run pytest -m integration tests/application/test_compile.py
addopts = "-ra --strict-markers -m 'not integration'"
markers = [
    "smoke: fast hermetic tests run by the pre-commit pytest-smoke hook",
    "integration: requires live Docker / Postgres / network access; skipped in CI by default",
]
